Start work on swerve drive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,4 +28,8 @@
   "java.test.defaultConfig": "WPIlibUnitTests",
   "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle",
   "editor.formatOnSave": true,
+  "cSpell.words": [
+    "Brushless",
+    "cancoder"
+  ],
 }
